# pitstick

./: .cproject  .gitignore  .project  CMakeLists.txt  ChangeLog  LICENSE  Makefile  README.md  dictionary  pitstick.doxyfile  pitstick.doxyfile.bak  sonar-project.properties  toolchain.arm-none-eabi-gcc.cmake
.github/workflows/: main.yml
doc/: ironman.txt
doc/html/: adc_8c.html  adc_8c.js  adc_8c__incl.map  adc_8c__incl.md5  adc_8c_a0d9dbdc793bffa545f5b2c5c0b6dd688_icgraph.map  adc_8c_a0d9dbdc793bffa545f5b2c5c0b6dd688_icgraph.md5  adc_8c_a156057cb0f4492d54bad69d4bfdad090_cgraph.map  adc_8c_a156057cb0f4492d54bad69d4bfdad090_cgraph.md5  adc_8c_a156057cb0f4492d54bad69d4bfdad090_icgraph.map  adc_8c_a156057cb0f4492d54bad69d4bfdad090_icgraph.md5  adc_8c_a23f145378c29e2599d0da09d07a082a2_icgraph.map  adc_8c_a23f145378c29e2599d0da09d07a082a2_icgraph.md5  adc_8c_a7b6fac3d670a4860ebec8a961d5c4a73_icgraph.map  adc_8c_a7b6fac3d670a4860ebec8a961d5c4a73_icgraph.md5  adc_8c_ad5f7fb41187df370fba496edbf10778d_icgraph.map  adc_8c_ad5f7fb41187df370fba496edbf10778d_icgraph.md5  adc_8c_source.html  adc_8h.html  adc_8h.js  adc_8h__dep__incl.map  adc_8h__dep__incl.md5  adc_8h__incl.map  adc_8h__incl.md5  adc_8h_a0d9dbdc793bffa545f5b2c5c0b6dd688_icgraph.map  adc_8h_a0d9dbdc793bffa545f5b2c5c0b6dd688_icgraph.md5  adc_8h_a156057cb0f4492d54bad69d4bfdad090_cgraph.map  adc_8h_a156057cb0f4492d54bad69d4bfdad090_cgraph.md5  adc_8h_a156057cb0f4492d54bad69d4bfdad090_icgraph.map  adc_8h_a156057cb0f4492d54bad69d4bfdad090_icgraph.md5  adc_8h_ad5f7fb41187df370fba496edbf10778d_cgraph.map  adc_8h_ad5f7fb41187df370fba496edbf10778d_cgraph.md5  adc_8h_ad5f7fb41187df370fba496edbf10778d_icgraph.map  adc_8h_source.html  annotated.html  annotated_dup.js  bll_8c.html  bll_8c.js  bll_8c__incl.map  bll_8c__incl.md5  bll_8c_a7c11a80a9ed420242ac287642131c1d0_cgraph.map  (+888 more)
scripts/: STM32F103C8_FLASH.ld
sources/project/: main.c
sources/project/bl/include/: bll.h  heartbeat.h  led_control.h  prng.h
sources/project/bl/src/: bll.c  heartbeat.c  led_control.c  prng.c
sources/project/conf/: project_conf.h
sources/project/dl/include/: led_strip.h  rgbw.h
sources/project/dl/src/: led_strip.c  rgbw.c
sources/project/hal/include/: adc.h  buttons.h  clock.h  eeemu.h  gpio.h  timer_dma.h  watchdog.h
sources/project/hal/src/: adc.c  buttons.c  clock.c  eeemu.c  gpio.c  timer_dma.c  watchdog.c
